5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1871_1713.log
== TEST (2019-07-02 16:20:05) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas :")))


media = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		media = sum(i:,2)
print(media)		
		






-- ERROR:
File "XXXX", line 11
    media = sum(i:,2)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:15) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas :")))


media = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		media = sum(i,:2)
print(media)		
		






-- ERROR:
File "XXXX", line 11
    media = sum(i,:2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:34) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas :")))


media = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		media = sum(i:, 2)
print(media)		
		






-- ERROR:
File "XXXX", line 11
    media = sum(i:, 2)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:50) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas :")))


media = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		media = sum(1:,2)
print(media)		
		






-- ERROR:
File "XXXX", line 11
    media = sum(1:,2)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:20) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas :")))


media = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		media = mean(matriz[i:,2])
print(media)		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:55) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas :")))


media = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		media = mean(matriz[2:,j])
print(media)		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:22:25) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas :")))


media = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		media = mean(matriz[2:,j])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:20) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas :")))
media = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		media = mean(matriz[2:,2])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:38) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas :")))
media = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		media = mean(matriz[i:,j])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:29) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas :")))
media = 0

for i in range(shape(matriz)[0]):
	for j in range(shape(matriz)[1]):
		media = mean(matriz[i:,j])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:46:48) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas :")))
media = 0

for i in range(shape(matriz)[1]):
		media = sum(matriz[i:,j])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:46:53) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[1]):
		media = sum(matriz[i:,j])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:26) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[1]):
		media = (matriz[i,2])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:37) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[1]):
		media = sum(matriz[i,2])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:50) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[0]):
		media = sum(matriz[i,2])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:02) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[0]):
	media = sum(matriz[i,2])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:23) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[0]):
	media = media + sum(matriz[i,2])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:34) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[0]):
	media = sum(matriz[i,2])
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:49:58) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[0]):
	media = sum(matriz[i,2])
x = media / shape(matriz)[0]
print(round(media,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:50:18) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[0]):
	media = sum(matriz[i,2])
x = media / shape(matriz)[0]
print(round(x,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:26) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[0]):
	media = sum(matriz[i,2])
x = media / shape(matriz)[0]
print(round(x,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:54) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[0]):
	media = sum(matriz[0,2])
x = media / shape(matriz)[0]
print(round(x,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:52:22) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[0]):
	media = sum(((matriz)[0,2]))
x = media / shape(matriz)[0]
print(round(x,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:54:19) 
-- CODE:
from numpy import*
from numpy.linalg import* 

matriz = array(eval(input("matriz de notas:")))
media = 0

for i in range(shape(matriz)[0]):
	media = sum(matriz[0,2])
x = media / shape(matriz)[0]
print(round(x,2))		
		






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
